# MorphStream

./: .gitignore  .test.swp  Dockerfile  LICENSE  MorphStream.7z  README.md  Readme.md  add_nic.xml  db4nfv.xml  db4nfv_2.xml  package-lock.json  package.json  pom.xml  test
.github/workflows/: maven.yml
OpenNF/: pom.xml
RelatedWork(code)/SgxHashJoinTest/: README
StateEngine/: pom.xml
StreamEngine/: pom.xml
affinity/: pom.xml
application/: pom.xml
chc/: pom.xml  readme.md
common/: pom.xml
cpp-lib/join/: CMakeLists.txt  README.md  build_example_external.sh
cpp-lib/sesame/: CMakeLists.txt  README.md
cpp-lib/streamjoin/: CMakeLists.txt
cpp-lib/streamjoin/cmake/: LibraryConfig.cmake
cpp-lib/streamjoin/include/: streamjoin.h  types.h
cpp-lib/streamjoin/src/: streamjoin.cpp
cpp-lib/streamjoinapp/: CMakeLists.txt  main.cpp
cpp-lib/streamjoinapp/cmake/: FindStreamJoin.cmake
cpp-lib/streamjoinapp/include/: benchmark.h
cpp-lib/streamjoinapp/src/: benchmark.cpp
data/jobs/: 2.json  3.json
libVNF/: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  Compile.sh  README.md  build.sh  conanfile.txt  main  message.proto  readme.md  start.sh
libVNF/dependencies/: README.md
libVNF/dependencies/kernel_bypass_stack/: README.md  netmap_vale.c
libVNF/dependencies/redis_epoll_wrapper/: CMakeLists.txt  README.md  redis_epoll_wrapper.cpp
libVNF/examples/: .gitignore  README.md
libVNF/examples/abc/: README.md
libVNF/examples/abc/layman/: Makefile  a.cpp  b.cpp  c.cpp  simulation_parameters.sh
libVNF/examples/abc/layman-sctp-http/: a.cpp  b.cpp  c.py  simulation_parameters.sh
libVNF/examples/abc/scmr/: Makefile  a.cpp  b.cpp  c.cpp  simulation_parameters.sh
libVNF/examples/abc/scmr-sctp-http/: .gitignore  Makefile  a.cpp  b.cpp  libconfig.json  simulation_parameters.sh  simulator.sh
libVNF/examples/abc_udp/layman/: .gitignore  Makefile  README  a.cpp  b.cpp  c.cpp
libVNF/examples/abc_udp/scmr/: a.cpp  b.cpp  c.cpp
libVNF/examples/timer/: Makefile  a.cpp  b.cpp
libVNF/include/: cli_libVNFFrontend_Interface.h  core.hpp  dataStore.hpp  intellistream_morphstream_util_libVNFFrontend_NativeInterface.h  json.hpp  libVNFFrontend_NativeInterface.h  message.pb.h  packets.hpp  runtime.hpp  sfc.hpp  stateManager.hpp  utils.hpp  utils_java_Loader_Loader.h
libVNF/include/datastore/: dspackethandler.hpp  perform.hpp  utils.hpp
libVNF/java_peer/: pom.xml
libVNF/java_peer/src/main/java/org/example/app/: TestMain.java  VNFCtlStub.java  VNFCtlStubImpl.java  VNFCtrlServer.java
libVNF/java_peer/src/main/protobuf/: message.proto
libVNF/scripts/: build.sh  environment.sh
libVNF/src/: dataStore.cpp  main.cpp  message.pb.cc  runtime.cpp  sfc.cpp  stateManager.cpp  utils.cpp
libVNF/src/datastore/: dspackethandler.cpp  utils.cpp
libVNF/src/kernel/: core.cpp  utils.hpp
libVNF/src/kernel_bypass/: core.cpp  utils.hpp
libVNF/src/kernel_l3/: core.cpp  utils.hpp
libVNF/src/vnf/: ccSelector.cpp
libVNF/utils/: readme.md
libVNF/utils/golang/: main.go
libVNF/utils/golang/dataHandler/: datahanlder.go
libVNF/utils/java/Loader/: Loader.java  compile.sh
libVNF/utils/java/StateAccess/: StateAccess.java
libVNF/vnf/: callee.cpp
libVNF/vnf/SL/: Makefile  config.csv  simulatedRequest.sh  sl.cpp  testbench.csv
libVNF/vnf/ccSelector/: app.cpp
libVNF/vnf/lb/: Makefile  app.cpp  config.csv  simulatedRequest.sh
libVNF/vnf/naiveLoadBalancer/: Makefile  a.cpp  b.cpp  example_config.csv  server.conf  simulation_parameters.sh  simulator.sh
libVNF/vnf/nat/: app.cpp
measurement/: raw_record.csv
measurement/caida_feature/: dispose.py  visualization.py
measurement/data_sender/: main.py  send_to.txt  send_to_cc_switch.csv  send_to_history.csv
morph-benchmark/: pom.xml
morph-clients/: pom.xml
morph-common/: pom.xml
morph-core/: pom.xml
morph-examples/: pom.xml
morph-lib/: CMakeLists.txt
morph-lib/include/: intellistream_morphstream_engine_db_impl_remote_RemoteCallLibrary.h
morph-lib/lib/: libdisni.la  libdisni.so.0
morph-lib/runner/: client_config.json
morph-lib/src/: RemoteCallLibrary.c
morph-web/: pom.xml
morph-web/dashboard/: angular.json  package-lock.json  package.json
morphStream/: README.md  pom.xml
morphStream/morph-clients/: dependency-reduced-pom.xml  pom.xml
morphStream/morph-core/: pom.xml
morphStream/morph-web/: pom.xml
morphStream/scripts/: dir.sh
scripts/: README.md  autorun.sh  clientTest.cpp  compile.sh  copy_data.sh  dir.sh  draw_figure_all.sh  dynamic_runner.sh  dynamic_runner_everyPhase.sh  ed_dynamic_runner.sh  global.sh  graph.py  group_runner.sh  lb_dynamic_runner.sh  main.sh  mock_state_manager.py  model_runner.sh  non_deterministic_state_access.sh  overview_comparison.py  overview_runner.sh  runGS.sh  runTP.sh  run_all.sh  run_all_experiments.py  run_partial.sh  runner.sh  sensitivity_runner.sh  sensitivity_runner_new.sh  sensitivty_fo.sh  sensitivty_id.sh  simpleRequester.py  window_runner.sh
scripts/22.11.18/: compile.sh  dynamic_runner_everyPhase.sh  model_runner.sh  runTP.sh  run_all.sh  runner.sh  sensitivity_txn_length_runner.sh
scripts/FaaS/: build.sh  client.sh  compile.sh  database.sh  docker-compose.yml  driver.sh  entrypoint.sh  run-application.sh  service_start.sh  updateConf.sh  worker.sh
scripts/FaultTolerance/: gs-run-all-scalability-workload.sh  gs-run-all-vary-abort-benchmark.sh  gs-run-all-vary-multiple-benchmark.sh  gs-run-all-vary-punctuation-benchmark.sh  gs-run-all-vary-skew-benchmark.sh  gs-run-relax-benchmark.sh  sl-run-all-benchmark.sh  sl-run-all-scalability-benchmark.sh  tp-run-all-benchmark.sh  tp-run-all-scalability-benchmark.sh
scripts/ModernHardware/: MicroArchitecturalAnalysis.sh  MulticoreScalability.sh
scripts/Overhead/: SystemOverhead.sh  VaryingJVMSize.sh
scripts/PerformanceEvaluation/: DynamicWorkload.sh  MultipleSchedulingStrategies.sh
scripts/SchedulingDecisions/: AbortHandling.sh  ExplorationStrategies.sh  (+1 more)
state-engine/: pom.xml
stream-engine/: pom.xml
web-dashboard/: pom.xml
web-ui/: README.md  angular.json  package-lock.json  package.json
(+6041 files in other folders)
